lox-tests/tests/field/set_on_class.stderr
ERROR: Only class instances have fields, not objects of type <class>
 --> 2:1
  |
2 | Foo.bar = "value"; // expect runtime error: Only instances have fields.
  | ^-----^
